fix: navigation button state toggle

--- a/template/header/header.html
+++ b/template/header/header.html
@@ -171,27 +171,32 @@
           </div>
 
           <button
-            class="button-new button-new_gradient button-new_normal-2 btn-position">
+            class="button-new button-new_gradient button-new_normal-2 btn-position"
+            data-type="btn">
             Long
           </button>
 
           <button
-            class="button-new button-new_gradient button-new_normal-2 btn-position">
+            class="button-new button-new_gradient button-new_normal-2 btn-position"
+            data-type="btn">
             Short
           </button>
 
           <button
-            class="button-new button-new_gradient button-new_normal btn-position">
+            class="button-new button-new_gradient button-new_normal btn-position"
+            data-type="btn">
             Top R/R
           </button>
 
           <button
-            class="button-new button-new_gradient button-new_big-4 btn-position">
+            class="button-new button-new_gradient button-new_big-4 btn-position"
+            data-type="btn">
             Top Balance
           </button>
 
           <button
-            class="button-new button-new_gradient button-new_save-normal btn-position btn-top-pln">
+            class="button-new button-new_gradient button-new_save-normal btn-position btn-top-pln"
+            data-type="btn">
             Top PnL
           </button>
         </div>
