--- a/template/header/header.html
+++ b/template/header/header.html
@@ -220,7 +220,7 @@
               %
             </p>
           </div>
-          <div class="info-line-box" data-value="data-field">
+          <div class="info-line-box" data-value="data-field" data-unit="$">
             <p class="info-line-box_data text_large-3 text__color_dark-grey">
               523.5
             </p>
