--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -41,7 +41,7 @@
               %
             </p>
           </div>
-          <div class="info-line-box" data-value="data-field">
+          <div class="info-line-box" data-value="data-field" data-unit="$">
             <p class="info-line-box_data text_huge text__color_dark-blue">0</p>
             <p class="info-line-box_text text_regular text__color_dark-blue">
               $
@@ -69,18 +69,14 @@
           class="stretch-panel__header-actions__block d-flex gap-2 align-items-center">
           <!-- Hide StretchPanel (stretchPanelActions.js) -->
           <button type="button" class="button-new button-normalize button-hide">
-            <img
-              src="./img/stretchPanel/icon-button-hide.svg"
-              alt="Icon" />
+            <img src="./img/stretchPanel/icon-button-hide.svg" alt="Icon" />
           </button>
           <!-- Close StretchPanel (stretchPanelActions.js) -->
           <button
             type="button"
             class="button-new button-normalize"
             data-modal-name="close-limit">
-            <img
-              src="./img/stretchPanel/icon-button-close.svg"
-              alt="Icon" />
+            <img src="./img/stretchPanel/icon-button-close.svg" alt="Icon" />
           </button>
         </div>
       </div>
