--- a/styles/style.css
+++ b/styles/style.css
@@ -2778,10 +2778,10 @@ svg {
   padding: 0 1rem 0 1.9375rem;
 }
 .section__stretch-panel .stretch-panel__header {
-  border: 0.3125rem solid #fff;
   border-radius: 1.25rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  padding: 0.3125rem;
 }
 .section__stretch-panel .stretch-panel__header .indicator-wrap {
   margin-right: 0.8125rem;
