--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -2151,17 +2151,16 @@
                                             Renko Stop Loss
                                           </button>
 
-                                          <div
-                                            class="data-info-container data-info-container_tiny">
+                                          <div class="handler-box">
                                             <div
-                                              class="input-container-wrap input-container-wrap_tiny-3 left"
+                                              class="input-container-wrap input-container-wrap_tiny"
                                               data-input="input-field">
                                               <div class="input-wrapp">
                                                 <input
-                                                  class="input-field input-field_left text_large text__color_dark-grey"
+                                                  class="input-field text_large text__color_dark-grey"
                                                   type="text"
                                                   data-type="number"
-                                                  data-unit="date" />
+                                                  data-unit="%" />
                                               </div>
                                               <div class="input-text-center">
                                                 <div
@@ -2170,22 +2169,15 @@
                                                   data-state="ture">
                                                   <p
                                                     class="text_large text__color_dark-grey">
-                                                    1
+                                                    3.1
                                                   </p>
                                                   <p
-                                                    class="text_small text__color_dark-grey"
-                                                    data-mode="minute">
+                                                    class="text_small text__color_dark-grey">
                                                     %
                                                   </p>
                                                 </div>
                                               </div>
                                             </div>
-                                            <button
-                                              class="button-input button-time-small right text_small"
-                                              data-type="time"
-                                              data-mode="minute">
-                                              %
-                                            </button>
                                           </div>
                                         </div>
                                       </div>
@@ -2313,7 +2305,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Forced change direction
                                       </button>
@@ -2534,7 +2526,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Show trendlines
                                       </button>
@@ -3323,7 +3315,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Show manipulation levels
                                       </button>
@@ -3600,7 +3592,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Show trendlines
                                       </button>
@@ -3670,7 +3662,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Forced change direction
                                       </button>
@@ -4088,7 +4080,7 @@
                                       </div>
 
                                       <button
-                                        class="button-non-press button-non-press_normal text_large w-100"
+                                        class="button-new button-new_normal text_large w-100"
                                         data-type="btn">
                                         Forced change direction
                                       </button>
