--- a/template/modals/stretchPanel/_stretch-panel.scss
+++ b/template/modals/stretchPanel/_stretch-panel.scss
@@ -1,5 +1,4 @@
 .section__stretch-panel {
-  padding: 0 1rem 0 1.9375rem;
   .stretch-panel {
     &__header {
       border-radius: 1.25rem;
@@ -27,12 +26,12 @@
       }
     }
     &__body {
-      border-radius: 1.25rem;
+      border-radius: 20px;
       box-shadow: 0rem 0.3125rem 0.9375rem 0rem rgba(0, 0, 0, 0.1);
       background-color: $white;
     }
     &__footer {
-      margin: 0.375rem;
+      margin: 0 0.375rem 0.375rem;
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       .button-stretch-panel {
@@ -50,7 +49,7 @@
     &__content {
       background-color: #f2f4f7;
       min-height: 25rem;
-      margin: 0 0.375rem 0.375rem;
+      margin: 0 0.375rem;
       padding: 2.5rem 2.125rem;
     }
     &__wrapper {
