--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -2547,7 +2547,9 @@
                                       Manipulation Pro strategy setup
                                     </div>
                                   </div>
-                                  <div class="block-content-wrap">
+                                  <div
+                                    class="block-content-wrap hide-scrollbar"
+                                    style="max-height: 822px; overflow-y: auto">
                                     <div class="block-content-wrap__wrapper">
                                       <div class="line">
                                         <div
@@ -2647,7 +2649,7 @@
                                         <div
                                           class="switcher-wrap align-items-center justify-content-between line-grid grid-row-switcher-2">
                                           <div
-                                            class="d-flex size-large align-items-center switcher-wrap_gap-medium">
+                                            class="d-flex align-items-center switcher-wrap_gap-medium">
                                             <div class="form-switch">
                                               <input
                                                 class="form-check-input custom-outline m-auto"
@@ -2725,7 +2727,7 @@
                                         <div
                                           class="switcher-wrap align-items-center justify-content-between line-grid grid-row-switcher-2">
                                           <div
-                                            class="d-flex size-large align-items-center switcher-wrap_gap-medium">
+                                            class="d-flex align-items-center switcher-wrap_gap-medium">
                                             <div class="form-switch">
                                               <input
                                                 class="form-check-input custom-outline m-auto"
@@ -3154,7 +3156,7 @@
                                                     class="input-field text_large text__color_dark-grey"
                                                     type="text"
                                                     data-type="number"
-                                                    data-unit="date" />
+                                                    data-unit="float" />
                                                 </div>
                                                 <div class="input-text-center">
                                                   <div
@@ -3189,7 +3191,7 @@
                                                     class="input-field text_large text__color_dark-grey"
                                                     type="text"
                                                     data-type="number"
-                                                    data-unit="date" />
+                                                    data-unit="float" />
                                                 </div>
                                                 <div class="input-text-center">
                                                   <div
@@ -3224,7 +3226,7 @@
                                                     class="input-field text_large text__color_dark-grey"
                                                     type="text"
                                                     data-type="number"
-                                                    data-unit="date" />
+                                                    data-unit="float" />
                                                 </div>
                                                 <div class="input-text-center">
                                                   <div
@@ -3259,7 +3261,7 @@
                                                     class="input-field text_large text__color_dark-grey"
                                                     type="text"
                                                     data-type="number"
-                                                    data-unit="date" />
+                                                    data-unit="float" />
                                                 </div>
                                                 <div class="input-text-center">
                                                   <div
@@ -3295,7 +3297,7 @@
                                                       class="input-field text_large text__color_dark-grey"
                                                       type="text"
                                                       data-type="number"
-                                                      data-unit="date" />
+                                                      data-unit="float" />
                                                   </div>
                                                   <div
                                                     class="input-text-center">
@@ -3332,7 +3334,8 @@
                                                 <input
                                                   class="input-field text_large text__color_dark-grey"
                                                   type="text"
-                                                  data-type="number" />
+                                                  data-type="number"
+                                                  data-unit="float" />
                                               </div>
                                               <div class="input-text-center">
                                                 <div
