feat: add some selector function to risk modal

--- a/styles/style.css
+++ b/styles/style.css
@@ -2382,7 +2382,10 @@ svg {
 
 .modal-risk-wrap {
   width: 336px;
-  height: 572px;
+  height: auto;
+}
+.modal-risk-wrap .modal-window-content {
+  padding-bottom: 14px;
 }
 
 .timer-container {
