feat: add logic to yeti modal API tab

--- a/template/modals/settings/settings.html
+++ b/template/modals/settings/settings.html
@@ -452,7 +452,8 @@
           id="api"
           role="tabpanel"
           aria-labelledby="api-tab"
-          tabindex="0">
+          tabindex="0"
+          data-button-group="api">
           <div
             class="modal-settings__content-grid modal-settings__content-grid--api">
             <div
@@ -464,7 +465,9 @@
               <button
                 class="button-new button-new_large text_regular btn-active"
                 data-type="btn"
-                data-state-text="Connect">
+                data-state-text="Connect"
+                data-button-group-name="api"
+                data-state="false">
                 Disconnect
               </button>
             </div>
@@ -477,7 +480,9 @@
               <button
                 class="button-new button-new_large text_regular"
                 data-type="btn"
-                data-state-text="Disconnect">
+                data-state-text="Disconnect"
+                data-button-group-name="api"
+                data-state="false">
                 Connect
               </button>
             </div>
