fix: edit input field logic (custom field)

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -5188,8 +5188,10 @@
                                 <input
                                   class="input-field text_large text__color_dark-grey"
                                   type="text"
-                                  data-type="number"
-                                  data-unit="%" />
+                                  data-type="dynamic-number"
+                                  data-unit="%"
+                                  data-max="10"
+                                  data-min="-10" />
                               </div>
                               <div class="input-text-center">
                                 <div
@@ -5240,8 +5242,10 @@
                                 <input
                                   class="input-field text_large text__color_dark-grey"
                                   type="text"
-                                  data-type="number"
-                                  data-unit="%" />
+                                  data-type="dynamic-number"
+                                  data-unit="%"
+                                  data-max="10"
+                                  data-min="-10" />
                               </div>
                               <div class="input-text-center">
                                 <div
