feat: add date & time selector

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -9234,11 +9234,13 @@
             src="./img/close.svg"
             alt="close-cross" />
         </div>
+
         <div class="modal-attention__grid">
           <div class="d-flex align-items-center justify-content-between">
             <button
-              class="button-new button-new_large text_large"
-              data-type="btn">
+              class="button-non-press button-non-press_large text_large"
+              data-type="btn"
+              data-name="dates">
               Date & Time
             </button>
 
@@ -9275,8 +9277,9 @@
 
           <div class="d-flex align-items-center justify-content-between">
             <button
-              class="button-new button-new_large text_large"
-              data-type="btn">
+              class="button-non-press button-non-press_large text_large"
+              data-type="btn"
+              data-name="dates">
               Date & Time
             </button>
 
@@ -9400,8 +9403,9 @@
         <div class="modal-attention__grid">
           <div class="d-flex align-items-center justify-content-between">
             <button
-              class="button-new button-new_large text_large"
-              data-type="btn">
+              class="button-non-press button-non-press_large text_large"
+              data-type="btn"
+              data-name="dates">
               Date & Time
             </button>
 
