--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -5094,10 +5094,20 @@
             </div>
 
             <div class="block-wrapper block-stop-loss">
-              <div class="block-container-wrap">
-                <div class="block-header-wrap overflow-hidden">
+              <div class="block-container-wrap overflow-hidden">
+                <div class="block-header-wrap align-items-center">
                   <div class="block-header-title text_small text__color_grey">
                     Stop Loss
+                  </div>
+
+                  <div
+                    class="block-header-info text_large text__color_red">
+                    -18<span class="text_small">R</span>
+                  </div>
+
+                  <div
+                    class="block-header-info text_large text__color_green">
+                    8<span class="text_small">R</span>
                   </div>
                 </div>
                 <div class="block-content-wrap">
