--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,7 @@
 @import './components/info-messages-panel';
 @import './components/schedule-table';
 @import './components/small-indicator';
+@import './components/vertical-button-group';
 
 @import '../template/modals/modals';
 @import '../template/modals/risk-manager/risk-manager';
