--- a/template/modals/_modals.scss
+++ b/template/modals/_modals.scss
@@ -75,3 +75,27 @@
     background-size: 8px;
   }
 }
+
+.modal-chart {
+  width: 1166px;
+  height: auto;
+
+  .modal-window-wrap {
+    max-width: none;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: 45px auto;
+    align-content: start;
+    gap: 5px;
+    padding: 5px;
+  }
+
+  &__chart {
+    border: 1px solid $white;
+    background-color: $super-light-blue-bg;
+    border-radius: 6px;
+    min-height: 550px;
+  }
+}
