--- a/style_guide_2/main.scss
+++ b/style_guide_2/main.scss
@@ -554,6 +554,12 @@ svg {
     text-align: center;
     padding: 0;
   }
+  &_tiny-2 {
+    width: 26px;
+    text-align: center;
+    padding: 0;
+  }
+
   &_gradient {
     background: linear-gradient(
       180deg,
