--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,8 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -1575,6 +1576,7 @@ svg {
 
 .button-tiny {
   min-width: 50px;
+  width: -moz-max-content;
   width: max-content;
   height: 20px;
   padding: 0;
@@ -1649,6 +1651,7 @@ svg {
 
 .conection-block-wrap {
   height: 23px;
+  width: -moz-max-content;
   width: max-content;
   max-width: 500px;
   display: inline-flex;
@@ -1835,7 +1838,9 @@ svg {
   width: auto;
   height: auto;
   min-width: 324px;
+  max-width: -moz-max-content;
   max-width: max-content;
+  max-height: -moz-max-content;
   max-height: max-content;
   border-radius: 10px;
   background: #f2f4f7;
@@ -1900,6 +1905,38 @@ svg {
   display: none;
 }
 
+.preloader-hidden {
+  display: none !important;
+}
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  color: red;
+}
+
+#preloader .spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #000;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .page-wrapper {
   width: 2240px;
 }
@@ -2143,6 +2180,7 @@ svg {
 }
 
 .navbar__btn-wrapp {
+  width: -moz-max-content;
   width: max-content;
   height: 100%;
   background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
@@ -2355,7 +2393,8 @@ svg {
   inset: 0;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: -1;
-  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
 }
 
 .modal-draggable {
@@ -2395,7 +2434,8 @@ svg {
 .gallery-block__link img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .gallery-block__close {
   position: absolute;
@@ -2753,6 +2793,7 @@ svg {
   margin: 0 auto;
 }
 .profit-range-header__content .line {
+  max-width: -moz-fit-content;
   max-width: fit-content;
   margin: 0 auto;
 }
@@ -2931,7 +2972,9 @@ svg {
 .button-normalize {
   border: none;
   outline: none;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-color: transparent;
   padding: 0;
   margin: 0;
@@ -3117,6 +3160,4 @@ svg {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.02) inset;
   background-color: rgba(234, 242, 245, 0.5);
   border-radius: 4px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
