--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -9387,6 +9387,12 @@
             </div>
           </div>
         </div>
+
+        <div class="pagination-container">
+          <div class="style-guide m-3">
+            <div id="pagination" class="pagination"></div>
+          </div>
+        </div>
       </div>
 
       <div class="stretch-panel__footer">
