feat: add new btn's to block take profit

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -7088,6 +7088,42 @@
                         </div>
                       </div>
                     </div>
+
+                    <div class="line">
+                      <div class="d-flex justify-content-between">
+                        <button
+                          class="button-new button-new_save-small text_regular"
+                          data-type="btn">
+                          Margin
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular"
+                          data-type="btn">
+                          Mnt
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular btn-active"
+                          data-type="btn">
+                          Fee
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular btn-active"
+                          data-type="btn">
+                          Funding
+                        </button>
+                      </div>
+                    </div>
+
+                    <div class="line">
+                      <button
+                        class="button-new w-100 text_regular btn-active"
+                        data-type="btn">
+                        Reverse Take Profit
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
